--- a/run-host/gpu-instance/docker-image-gpu-anaconda/Dockerfile
+++ b/run-host/gpu-instance/docker-image-gpu-anaconda/Dockerfile
@@ -16,6 +16,11 @@ RUN echo 'export PATH=/opt/conda/bin:$PATH' > /etc/profile.d/conda.sh && \
 ENV PATH /opt/conda/bin:$PATH
 
 
+# conda install -c anaconda gensim=1.0.1
+# conda install -c anaconda tensorflow-gpu=1.1.0
+# conda install -c conda-forge keras=2.0.2
+
+
 # install pip 
 RUN pip3 install --upgrade pip
 
